RateLimit 추가 및 env 수정

--- a/.env.example
+++ b/.env.example
@@ -21,13 +21,13 @@ DB_PASSWORD=ai
 # DB_HOST=127.0.0.1
 
 # ───────── Session/Cache/Queue ─────────
-SESSION_DRIVER=array
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
-CACHE_STORE=array
-CACHE_DRIVER=array
+CACHE_STORE=file
+CACHE_DRIVER=file
 # (지금 Redis 안 쓰면 위 값 그대로 OK)
 
 # ───────── Redis (옵션: 나중에 쓸 때만) ─────────
@@ -42,6 +42,8 @@ OPENAI_API_KEY=
 OPENAI_API_BASE=https://api.openai.com/v1
 LLM_MODEL=gpt-4o-mini
 LLM_TIMEOUT=15
+RATE_PER_MIN=60
+
 # (선택) 429/5xx 백오프 파라미터
 LLM_RETRIES=3
 LLM_RETRY_BASE_MS=500
